--- a/home.html
+++ b/home.html
@@ -4,8 +4,43 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/root.css" />
     <link rel="stylesheet" href="css/home.css" />
-    <title>Document</title>
+    <title>Home</title>
+    <body>
+      <header>
+        <nav>
+          <a href=""><img src="assets/menu.svg" alt="menu-icon" /></a>
+          <a href=""><img src="assets/Black_logo 1.svg" alt="logo-icon" /></a>
+          <a href=""><img src="assets/cart.svg" alt="cart-icon" /></a>
+        </nav>
+      </header>
+      <section id="hero">
+        <h1>
+          Create your unique piece of
+          <div id="jewellery"></div>
+            <img id="yellowText" src="assets/jewellery.svg" alt="decorative-heading" />
+          </div>
+        </h1>
+        <img id="heroImg" src="assets/hero_img.jpg" alt="hero-img" />
+      </section>
+      <section id="video">
+        <video src="" controls poster="assets/hero_img.jpg"></video>
+        <article>
+          <h3>By you, for you</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Scelerisque adipiscing dui ullamcorper tortor. Vel vitae convallis ac nisi tellus facilisis. Magna et commodo, tortor ut quis lectus purus. Sed tincidunt nunc nibh in suspendisse a.</p>
+      </article>
+      </section>
+      <section id="steps">
+        <h2>Order your kit today.</h2>
+        <div></div>
+      </section>
+      <section id="kits"></section>
+      <section id="sustain"></section>
+      <section id="pinterest"></section>
+      <section id="trustpilot"></section>
+      <footer></footer>
+    </body>
   </head>
   <body></body>
 </html>
