added static html for cart

--- a/inspiration.html
+++ b/inspiration.html
@@ -1,11 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/inspiration.css" />
-    <title>Document</title>
-  </head>
-  <body></body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="css/inspiration.css" />
+  <link rel="stylesheet" href="css/cart.css" />
+  <title>Get inspired | BYU Studio</title>
+</head>
+
+<body>
+  <header>
+    <div class="p">Nav bar here</div>
+    <div class="cart-outer-box">
+      <p>X</p>
+      <div class="background-div"></div>
+      <h1>Cart</h1>
+      <section class="cart-card">
+        <img src="" alt="">
+        <h3>Title</h3>
+        <p>Some details</p>
+        <p>DKK <span>price</span></p>
+        <p>X</p>
+        <div class="quantity-outer-box">
+          <p>+</p>
+          <p>1</p>
+          <p>-</p>
+        </div>
+      </section>
+      <div class="subtotal-flex">
+        <h3>Subtotal</h3>
+        <p>DKK <span>price</span></p>
+      </div>
+      <button>Proceed to checkout</button>
+    </div>
+  </header>
+  <main></main>
+  <footer></footer>
+</body>
+
 </html>
