--- a/checkout-info.html
+++ b/checkout-info.html
@@ -13,7 +13,7 @@
       <div class="mobilesummarycontent">
         <div class="summaryflex">
           <p><span>See</span> order summary</p>
-          <img src="assets/openfat.png" alt="arrow" />
+          <img src="assets/openfat.png" alt="arrow" class="sumarrow" />
         </div>
         <span class="summaryphone hidden"> insert items from cart here </span>
       </div>
@@ -121,12 +121,15 @@
           />
           <label for="personalpickup">Personal pick up - Free</label>
         </section>
-        <button>Continue to Payment</button>
+        <div class="buttonflex">
+          <button>Continue to Payment</button>
+          <a href="index.html"> Return to frontpage</a>
+        </div>
       </form>
       <section class="ordersummarydesktop">
         <h2>Order Summary</h2>
       </section>
     </main>
   </body>
-  <script src="js/checkout.js"></script>
+  <script src="js/ordersummary.js"></script>
 </html>
