Sending info from checkout1 to summary on page 2

--- a/checkout-payment.html
+++ b/checkout-payment.html
@@ -12,7 +12,7 @@
     <section class="ordersummarymobile">
       <div class="mobilesummarycontent">
         <div class="summaryflex">
-          <p><span>See</span> order summary</p>
+          <p><span class="summarytoggletext">See</span> order summary</p>
           <img src="assets/openfat.png" alt="arrow" class="sumarrow" />
         </div>
         <span class="summaryphone hidden"> insert items from cart here </span>
@@ -113,6 +113,6 @@
       </section>
     </main>
   </body>
-  <script src="js/checkout.js"></script>
+  <script src="js/checkout-payment.js"></script>
   <script src="js/ordersummary.js"></script>
 </html>
