Saving completed purchase info to database

--- a/checkout-info.html
+++ b/checkout-info.html
@@ -24,7 +24,7 @@
           <span class="currentcrumb">Information</span> > Payment > Confirmation
         </p>
       </div>
-      <form class="infoform" action="">
+      <form class="infoform" action="checkout-payment.html">
         <section class="sec-contact">
           <h4>Contact Information</h4>
           <input
