--- a/checkout-payment.html
+++ b/checkout-payment.html
@@ -53,7 +53,7 @@
         </section>
         <section class="sec-payment">
           <h3>Payment</h3>
-          <form action="">
+          <form action="checkout-reciept.html">
             <div class="cardwrap paymentoptionwrap paymentoptionselected">
               <input
                 type="radio"
@@ -101,12 +101,14 @@
               />
               <label for="paypal">Paypal</label>
             </div>
+            <div class="buttonflex">
+              <button type="submit">Confirm Payment</button>
+              <a href="checkout-info.html">
+                Return to information and shipping</a
+              >
+            </div>
           </form>
         </section>
-        <div class="buttonflex">
-          <button>Confirm Payment</button>
-          <a href="checkout-info.html"> Return to information and shipping</a>
-        </div>
       </section>
       <section class="ordersummarydesktop">
         <h2>Order Summary</h2>
