--- a/checkout-reciept.html
+++ b/checkout-reciept.html
@@ -18,8 +18,32 @@
       </div>
       <section class="sec-reciept">
         <h2>Your Reciept</h2>
-        <p>lots of info goes here</p>
-        <p>more info</p>
+        <div class="reciept-text-wrap">
+          <p>lots of info goes here</p>
+          <p>more info</p>
+          <section class="sec-infosummary">
+            <div>
+              <div class="infosummaryflex smallinfo">
+                <p>Contact</p>
+              </div>
+              <p class="sum-email">example@gmail.com</p>
+            </div>
+            <div class="line"></div>
+            <div>
+              <div class="infosummaryflex smallinfo">
+                <p>Shipping Address</p>
+              </div>
+              <p class="sum-address">Street, City, Postal Code, Country</p>
+            </div>
+            <div class="line"></div>
+            <div>
+              <div class="infosummaryflex smallinfo">
+                <p>Shipping Option</p>
+              </div>
+              <p class="sum-shipping">PostNord - DKK 39.00</p>
+            </div>
+          </section>
+        </div>
       </section>
       <section class="sec-thankyou">
         <h3>Thank you for your purchase</h3>
@@ -67,6 +91,5 @@
       <button>Return to front page</button>
     </main>
   </body>
-  <script src="js/checkout.js"></script>
-  <script src="js/ordersummary.js"></script>
+  <script src="js/checkout-reciept.js"></script>
 </html>
