fixed layout on desktop-reciept

--- a/checkout-reciept.html
+++ b/checkout-reciept.html
@@ -21,27 +21,46 @@
         <div class="reciept-text-wrap">
           <p>lots of info goes here</p>
           <p>more info</p>
+          <section class="sec-paymentsummary">
+            <div class="line"></div>
+            <div class="infosummaryflex space">
+              <p>Subtotal</p>
+              <p>DKK 900.00</p>
+            </div>
+            <div class="infosummaryflex space">
+              <p>Shipping</p>
+              <p>DKK 35.00</p>
+            </div>
+            <div class="infosummaryflex space">
+              <p>Total</p>
+              <p>DKK 935.00</p>
+            </div>
+          </section>
           <section class="sec-infosummary">
+            <div class="line"></div>
+            <div class="infosummaryflex space">
+              <p>Order Number</p>
+              <p>X1X2X3X4</p>
+            </div>
             <div>
               <div class="infosummaryflex smallinfo">
                 <p>Contact</p>
               </div>
               <p class="sum-email">example@gmail.com</p>
             </div>
-            <div class="line"></div>
             <div>
               <div class="infosummaryflex smallinfo">
                 <p>Shipping Address</p>
               </div>
               <p class="sum-address">Street, City, Postal Code, Country</p>
             </div>
-            <div class="line"></div>
             <div>
               <div class="infosummaryflex smallinfo">
                 <p>Shipping Option</p>
               </div>
               <p class="sum-shipping">PostNord - DKK 39.00</p>
             </div>
+            <div class="line"></div>
           </section>
         </div>
       </section>
@@ -88,7 +107,7 @@
         </p>
         <p class="signature">x Bea Solveig</p>
       </section>
-      <button>Return to front page</button>
+      <button class="button-reciept">Return to front page</button>
     </main>
   </body>
   <script src="js/checkout-reciept.js"></script>
