--- a/home.html
+++ b/home.html
@@ -29,7 +29,7 @@
         <video src="" controls poster="assets/hero_img.jpg"></video>
         <article>
           <h3>By you, for you</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Scelerisque adipiscing dui ullamcorper tortor. Vel vitae convallis ac nisi tellus facilisis. Magna et commodo, tortor ut quis lectus purus. Sed tincidunt nunc nibh in suspendisse a.</p>
+          <p id="videoPar">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Scelerisque adipiscing dui ullamcorper tortor. Vel vitae convallis ac nisi tellus facilisis. Magna et commodo, tortor ut quis lectus purus. Sed tincidunt nunc nibh in suspendisse a.</p>
       </article>
       </section>
       <section id="steps">
@@ -75,8 +75,10 @@
       </section>
       <section id="pinterest">
         <div><h2>Get inspired by others</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Scelerisque adipiscing dui ullamcorper tortor. Vel vitae convallis ac nisi</p></div>
+        
+           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Scelerisque adipiscing dui ullamcorper tortor. Vel vitae convallis ac nisi</p><button>Show me more</button> </div>
 <img src="assets/pinterest.png" alt="">
+
       </section>
       <section id="trustpilot">
         <div><img src="assets/trustpilot.svg" alt=""><p>TrustScore <span id="underline">4.8 | 287 reviews</span></p></div>
