made sliding cart

--- a/inspiration.html
+++ b/inspiration.html
@@ -65,8 +65,11 @@
       <a href="#" class="cart-to-checkout"><button>Proceed to checkout</button></a>
     </div>
   </header>
-  <main></main>
+  <main>
+    <button class="toggle-btn">Cart</button>
+  </main>
   <footer></footer>
+  <script src="js/cart.js"></script>
 </body>
 
 </html>
