all images except the kit

--- a/sustainanability.html
+++ b/sustainanability.html
@@ -104,7 +104,7 @@
                 <a href="about.html">
                   <img
                     class="ham-cat-image"
-                    src="assets/refills-blur.png"
+                    src="assets/about-blur.png"
                     alt="" />
                   <div class="big-link-flex">
                     <h2>ABOUT US</h2>
@@ -117,7 +117,7 @@
                 <a href="manifesto.html">
                   <img
                     class="ham-cat-image"
-                    src="assets/refills-blur.png"
+                    src="assets/manifesto-blur.png"
                     alt="" />
                   <div class="big-link-flex">
                     <h2>MANIFESTO</h2>
@@ -130,7 +130,7 @@
                 <a href="sustainanability.html">
                   <img
                     class="ham-cat-image"
-                    src="assets/refills-blur.png"
+                    src="assets/sustainability-blur.png"
                     alt="" />
                   <div class="big-link-flex">
                     <h2>SUSTAINABILITY</h2>
@@ -143,7 +143,7 @@
                 <a href="contact.html">
                   <img
                     class="ham-cat-image"
-                    src="assets/refills-blur.png"
+                    src="assets/contact-blur.png"
                     alt="" />
                   <div class="big-link-flex">
                     <h2>CONTACT US</h2>
@@ -177,10 +177,7 @@
             <div class="big-pages-body-flex">
               <div class="big-pages-body">
                 <a href="faq.html">
-                  <img
-                    class="ham-cat-image"
-                    src="assets/refills-blur.png"
-                    alt="" />
+                  <img class="ham-cat-image" src="assets/faq-blur.png" alt="" />
                   <div class="big-link-flex">
                     <h2>FAQ</h2>
                     <img
@@ -192,7 +189,7 @@
                 <a href="inspiration.html">
                   <img
                     class="ham-cat-image"
-                    src="assets/refills-blur.png"
+                    src="assets/inspiration-blur.png"
                     alt="ring made from blue wax" />
                   <div class="big-link-flex">
                     <h2>INSPIRATION</h2>
@@ -205,7 +202,7 @@
                 <a href="tutorial.html">
                   <img
                     class="ham-cat-image"
-                    src="assets/casting-blur.png"
+                    src="assets/tutorials-blur.png"
                     alt="hands with several unique silver rings" />
                   <div class="big-link-flex">
                     <h2>Tutorials</h2>
