tryinglasse'smethod,myfirstideawastoocomplicated

--- a/tutorial.html
+++ b/tutorial.html
@@ -7,5 +7,29 @@
     <link rel="stylesheet" href="css/tutorial.css" />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <section class="product-section">
+      <template class="product-template">
+        <p class="productname">Product: <span></span></p>
+        <p class="price">DKK <span>0</span></p>
+        <button>Add to cart</button>
+      </template>
+    </section>
+    <section class="cart-section">
+      <template class="cart-template">
+        <label for="ID">NAME</label>
+        <input
+          type="number"
+          value="1"
+          name=""
+          id=""
+          min="0"
+          max="10"
+          maxlenght="2"
+        />
+        <p class="price">DKK <span>0</span></p>
+      </template>
+    </section>
+  </body>
+  <script src="js/restdbtest.js"></script>
 </html>
