waiting for feedback on arrow before changing all

--- a/sustainanability.html
+++ b/sustainanability.html
@@ -13,7 +13,7 @@
       <div class="head-hamburger">
         <img
           class="close-icon"
-          src="assets/cross-beige2.png"
+          src="assets/cross-white.png"
           alt="X for closing hamburgermenu"
         />
       </div>
@@ -33,7 +33,7 @@
               <img
                 class="big-pages-header-logo"
                 src="assets/Black_logo.png"
-                alt=""
+                alt="BYU studio logo"
               />
             </div>
             <div class="big-pages-body-flex">
@@ -47,7 +47,7 @@
                     <h2>KITS</h2>
                     <img
                       class="ham-cat-arrow"
-                      src="assets/arrow.png"
+                      src="assets/arrow-thin.png"
                       alt="arrow"
                     /></div
                 ></a>
@@ -218,8 +218,6 @@
               <p>hello@byustudio.dk | +45 12 34 56 78</p>
             </div>
           </div>
-
-          <h1>Cart (<span>0</span>)</h1>
         </div>
       </div>
       <div class="footer-hamburger someiconflex">
