fixed problems after new margin + added footer

--- a/checkout-payment.html
+++ b/checkout-payment.html
@@ -114,6 +114,13 @@
         <h2>Order Summary</h2>
       </section>
     </main>
+    <footer class="small-footer-wrap">
+      <p>
+        <a href="#">Privacy Policy</a> | <a href="faq.html">FAQ</a> |
+        <a href="#">Customer Service</a> | <a href="#">Shipping</a> |
+        <a href="#">Terms and Conditions</a>
+      </p>
+    </footer>
   </body>
   <script src="js/checkout-payment.js"></script>
   <script src="js/ordersummary.js"></script>
