--- a/checkout-reciept.html
+++ b/checkout-reciept.html
@@ -109,6 +109,13 @@
       </section>
       <button class="button-reciept">Return to front page</button>
     </main>
+    <footer class="small-footer-wrap">
+      <p>
+        <a href="#">Privacy Policy</a> | <a href="faq.html">FAQ</a> |
+        <a href="#">Customer Service</a> | <a href="#">Shipping</a> |
+        <a href="#">Terms and Conditions</a>
+      </p>
+    </footer>
   </body>
   <script src="js/checkout-reciept.js"></script>
 </html>
