--- a/checkout-info.html
+++ b/checkout-info.html
@@ -130,6 +130,13 @@
         <h2>Order Summary</h2>
       </section>
     </main>
+    <footer class="small-footer-wrap">
+      <p>
+        <a href="#">Privacy Policy</a> | <a href="faq.html">FAQ</a> |
+        <a href="#">Customer Service</a> | <a href="#">Shipping</a> |
+        <a href="#">Terms and Conditions</a>
+      </p>
+    </footer>
   </body>
   <script src="js/ordersummary.js"></script>
   <script src="js/checkout-info.js"></script>
