removed product descriptions from templates

--- a/checkout-info.html
+++ b/checkout-info.html
@@ -163,7 +163,7 @@
                 <div class="cartproducttext">
                   <div>
                     <p class="cartproductname">Product Name</p>
-                    <p class="cartproductdescription">product description</p>
+                    <!-- <p class="cartproductdescription">product description</p> -->
                   </div>
                   <p class="cartproductprice"><span>234</span> DKK</p>
                 </div>
