--- a/checkout-reciept.html
+++ b/checkout-reciept.html
@@ -19,6 +19,25 @@
       <section class="sec-reciept">
         <h2>Your Reciept</h2>
         <div class="reciept-text-wrap">
+          <div class="templateparent-desktop">
+            <template class="template-desktop">
+              <div class="cartitem">
+                <img class="cartproductimage" src="" alt="product image" />
+                <div class="cartproducttext">
+                  <div>
+                    <p class="cartproductname">Product Name</p>
+                    <!-- <p class="cartproductdescription">product description</p> -->
+                  </div>
+                  <p class="cartproductprice"><span>234</span> DKK</p>
+                </div>
+                <img
+                  class="crossproduct"
+                  src="assets/cross.png"
+                  alt="cross for removing item"
+                />
+              </div>
+            </template>
+          </div>
           <p>lots of info goes here</p>
           <p>more info</p>
           <section class="sec-paymentsummary">
@@ -106,8 +125,8 @@
           ethical production process.
         </p>
         <p class="signature">x Bea Solveig</p>
+        <button class="button-reciept">Return to front page</button>
       </section>
-      <button class="button-reciept">Return to front page</button>
     </main>
     <footer class="small-footer-wrap">
       <p>
